First usage of Nuxeo parser in Studio

--- a/nuxeo-dsl-studio/index-dev.html
+++ b/nuxeo-dsl-studio/index-dev.html
@@ -129,7 +129,8 @@
 	<script src="bower_components/codemirror/addon/hint/show-hint.js"></script>
 	<!-- endinject -->
 	<!-- inject:js -->
-	<script src="js/lib/dagre.min.js"></script>	
+	<script src="js/lib/dagre.min.js"></script>
+	<script src="js/lib/chevrotain.min.js"></script>
 	<script src="js/codemirror/jdl-hint.js"></script>
 	<script src="js/codemirror/codemirror.jdl-mode.js"></script>
 	<script src="js/nomnoml/skanaar.canvas.js"></script>
