simplify java interpreter

--- a/nuxeo-dsl-studio/index-dev.html
+++ b/nuxeo-dsl-studio/index-dev.html
@@ -108,9 +108,9 @@
 		<button class="btn" ng-click="app.dismissDialog()">Dismiss</button>
 	</div>
 	<script>
-	// temp hack to use jdl parser from jhipster-core
-	//var module = module || {};
-	//var root = window
+	// temp hack to use ndl parser from nuxeo-dsl-core
+	// ... this hack will probably not be so temporary :-)	
+	var global = window
 	</script>
 	<script src="js/lib/chevrotain.min.js"></script>
 	<!-- build:js dist/js/main.js -->
