Better packaging and first compilation

--- a/nuxeo-dsl-studio/index-dev.html
+++ b/nuxeo-dsl-studio/index-dev.html
@@ -112,8 +112,9 @@
 	// ... this hack will probably not be so temporary :-)	
 	var global = window
 	</script>
-	<script src="js/lib/chevrotain.min.js"></script>
+	
 	<!-- build:js dist/js/main.js -->
+	<script src="js/lib/chevrotain.js"></script>
     <!-- bower:js -->
 	<script src="bower_components/lodash/lodash.js"></script>
 	<script src="bower_components/jquery/dist/jquery.js"></script>
@@ -130,7 +131,6 @@
 	<!-- endinject -->
 	<!-- inject:js -->
 	<script src="js/lib/dagre.min.js"></script>
-	<script src="js/lib/chevrotain.min.js"></script>
 	<script src="js/codemirror/jdl-hint.js"></script>
 	<script src="js/codemirror/codemirror.jdl-mode.js"></script>
 	<script src="js/nomnoml/skanaar.canvas.js"></script>
