First implem of alias and queries

--- a/nuxeo-dsl-studio/index-dev.html
+++ b/nuxeo-dsl-studio/index-dev.html
@@ -121,11 +121,11 @@
 	
 	<!-- build:js dist/js/main.js -->
 	<script src="js/lib/chevrotain.js"></script>
+	<script src="js/nuxeo_dsl.js"></script>
     <!-- bower:js -->
 	<script src="bower_components/lodash/lodash.js"></script>
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
-	<script src="bower_components/nuxeodsl_parser/index.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/codemirror/lib/codemirror.js"></script>
 	<script src="bower_components/codemirror/keymap/sublime.js"></script>
