--- a/nuxeo-graphql-core/src/main/resources/web/nuxeo.war/graphiql/index.html
+++ b/nuxeo-graphql-core/src/main/resources/web/nuxeo.war/graphiql/index.html
@@ -104,7 +104,7 @@
       function graphQLFetcher(graphQLParams) {
         // This example expects a GraphQL server at the path /graphql.
         // Change this to point wherever you host your GraphQL server.
-        return fetch('/nuxeo/graphql', {
+        return fetch('/nuxeo/graphql/', {
           method: 'post',
           headers: {
             'Accept': 'application/json',
