--- a/nuxeo-dsl-studio/index.html
+++ b/nuxeo-dsl-studio/index.html
@@ -21,7 +21,7 @@
 	<div class="wrap">
 		<header>
 			<div class="tools left">
-				<a href="http://www.nuxeo.con/" title="Nuxeo website" target="_blank"><img class="jhi-logo" src="img/logo-nuxeo.png"></a>
+				<a href="http://www.nuxeo.com/" title="Nuxeo website" target="_blank"><img class="jhi-logo" src="img/logo-nuxeo.png"></a>
 				<a class="logo" href="javascript:void(0)" ng-click="app.toggleSidebar('about')" title="About Nuxeo DSL Studio"><h1>Nuxeo DSL Studio</h1> &nbsp;</a>
 			</div>
 			<div class="tools">
