--- a/nuxeo-dsl-studio/index-dev.html
+++ b/nuxeo-dsl-studio/index-dev.html
@@ -12,7 +12,7 @@
 	<meta name="msapplication-navbutton-color" content="#282C34">
 	<!-- iOS Safari -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="#282C34">
-	<title>Nuxeo DSL Studio</title>
+	<title>Nuxeo DSL Studio Feature XYZ</title>
 
 	<!-- build:css dist/css/main.css -->
 	<!-- bower:css -->
@@ -34,7 +34,7 @@
 		<header>
 			<div class="tools left">
 				<a href="http://www.nuxeo.com/" title="Nuxeo website" target="_blank"><img class="jhi-logo" src="img/logo-nuxeo.png"></a>
-				<a class="logo" href="javascript:void(0)" ng-click="app.toggleSidebar('about')" title="About Nuxeo DSL Studio"><h1>Nuxeo DSL Studio</h1> &nbsp;</a>
+				<a class="logo" href="javascript:void(0)" ng-click="app.toggleSidebar('about')" title="About Nuxeo DSL Studio"><h1>Nuxeo DSL Studio Feature XYZ</h1> &nbsp;</a>
 			</div>
 			<div class="tools">
 				<a href="javascript:void(0)" ng-click="app.toggleSidebar('about')" title="About JDL-Studio">
@@ -115,10 +115,10 @@
 	</div>
 	<script>
 	// temp hack to use ndl parser from nuxeo-dsl-core
-	// ... this hack will probably not be so temporary :-)	
+	// ... this hack will probably not be so temporary :-)
 	var global = window
 	</script>
-	
+
 	<!-- build:js dist/js/main.js -->
 	<script src="js/lib/chevrotain.js"></script>
 	<script src="js/nuxeo_dsl.js"></script>
